feat(chroma): Add foundations for filter expressions
Signed-off-by: Thomas Vitale <ThomasVitale@users.noreply.github.com>